@@ -230,6 +230,26 @@ if ($actionsDone) {
 echo 'Directories successfuly updated.<br/><br/>';
 //END UPDATE FROM 4.0.2 TO 4.1.0
 
+//START UPDATE FROM 4.1.1 TO 4.1.2
+# Change structure of website table to add 403 and 404 data
+$sql = "show columns from websites";
+$q = new CMS_query($sql);
+$installed = false;
+while($r = $q->getArray()) {
+	if ($r["Field"] == "403_web") {
+		$installed = true;
+	}
+}
+if (!$installed) {
+	if (CMS_patch::executeSqlScript(PATH_MAIN_FS.'/sql/updates/v411-to-v412.sql',true)) {
+		CMS_patch::executeSqlScript(PATH_MAIN_FS.'/sql/updates/v411-to-v412.sql',false);
+		echo 'Database successfuly updated (website 403 and 404)<br/>';
+	} else {
+		echo 'Error during database update ! Script '.PATH_MAIN_FS.'/sql/updates/v411-to-v412.sql must be executed manualy<br/>';
+	}
+}
+//END UPDATE FROM 4.1.1 TO 4.1.2
+
 //Update Automne messages
 $files = glob(PATH_MAIN_FS."/sql/messages/*/*.sql", GLOB_NOSORT);
 if (is_array($files)) {
