@@ -1,4 +1,5 @@
 V4.1.2 (in progress)
+[FEATURE] : Add website specific 403 and 404 pages
 
 V4.1.1 (08/03/2011)
 [BUG] : Correct bugs numbers: 1742, 1746, 1715, 1753, 1757, 1758 (see http://www.automne-cms.org/bug/)
